--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=SistemaBuscadorEF;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
